k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-app-service
  namespace: default
spec:
  selector:
    app: simple-app
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8055
    targetPort: 80
